tests/NormalTests/paczka1/small_fuzzy/17676890.err
Error in line 1: b8vJcDJpmI A68 53,2
Error in line 9: XQxTq49loHE S698 94,9
Error in line 11: b8vJcDJpmI S503 36,8
Error in line 14: b8vJcDJpmI S698 86,0
